# rsgiadapter

./: .bumpversion.cfg  README.md  pyproject.toml
example/: fast.py
examples/: _blacksheep.py  _falcon.py  _fastapi.py  _litestar.py  _quart.py  _sanic.py  _starlette.py
examples/_django/: README.md  manage.py  serve.py
examples/_django/_django/: asgi.py  settings.py  urls.py  wsgi.py
examples/_django/app/: urls.py  views.py
src/rsgiadapter/: __init__.py  asgi.py  constant.py  lifespan.py  protocol.py  response.py
tests/: test_asgi.py  test_response.py
