[project]
name = "rsgiadapter"
dynamic = ["version"]
description = "An adapter for asgi to rsgi"
authors = [
    { name = "belingud", email = "im.victor@qq.com" },
]
dependencies = []
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "BSD-3-Clause" }
keywords = [
    "asgi",
    "rsgi",
    "adapter",
    "asgi adapter",
    "rsgi adapter",
    "asgi to rsgi",
    "rsgi to asgi",
    "asyncio"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.optional-dependencies]
examples = [
    "setuptools>=70.0.0",
    "fastapi>=0.111.0",
    "granian>=1.4.1",
    "sanic>=23.12.1",
    "blacksheep>=2.0.7",
    "litestar>=2.9.0",
    "quart>=0.19.6",
    "django>=4.2.13",
    "falcon>=3.1.3",
    "tornado>=6.4.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
Homepage = "https://github.com/belingud/rsgiadapter"

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["src/rsgiadapter"]

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --strict"
testpaths = ["tests/"]
python_files = ["tests/*/test*.py"]


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/rsgiadapter/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "uvicorn>=0.30.1",
    "bump2version>=1.0.1",
    "pytest>=8.2.2",
]
